--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "crud": "nodemon crud/server.js"
+    "crud": "nodemon src/crud/server.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,10 @@
     "hbs": "^4.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "@types/express": "^4.17.6",
+    "@types/filesystem": "0.0.29",
+    "@types/node": "^13.13.4",
+    "nodemon": "^2.0.3",
+    "typescript": "^3.8.3"
   }
 }
