--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "crud": "nodemon src/crud/server.js"
+    "crud": "nodemon src/crud/server.ts"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "@types/filesystem": "0.0.29",
     "@types/node": "^13.13.4",
     "nodemon": "^2.0.3",
+    "ts-node": "^8.9.1",
     "typescript": "^3.8.3"
   }
 }
